# demo-elasticity

./: AGENTS.md  README.md  elasticity.md
.agents-done/: design.md
.agents-wip/: design.md  platform-api-migration.md
agent/: .env.example  package-lock.json  package.json  prompt.md  tsconfig.json
agent/scripts/: deploy-manual.ts  deploy.ts
agent/src/: index.ts
api/: .env.example  package-lock.json  package.json
api/scripts/: test-debug.ts  test-sandbox.ts
api/src/: github.ts  index.ts  sandbox.ts  setup.ts  webhook.ts
ingest-rs/: Cargo.toml  README.md
ingest-rs/src/: handlers.rs  lib.rs  main.rs  storage.rs  unified.rs
ingest-rs/src/pipeline/: batch.rs  emit.rs  enrich.rs  mod.rs  normalize.rs  parse.rs  validate.rs
ingest-rs/src/sources/: cloud.rs  commerce.rs  csv.rs  custom.rs  github.rs  mod.rs  observability.rs  stripe.rs
ingest-rs/tests/: pipeline_test.rs
