[package]
name = "ingest-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
# Heavy deps — realistic for a data pipeline, add compilation pressure
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart", "cookies", "gzip", "brotli", "deflate"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
